service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-php-service
spec:
  selector:
    app: my-php-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer  # Change to appropriate service type (e.g., NodePort, LoadBalancer, ClusterIP)
